Add button functionality
Add button functionality to fetch idea from API and show it on the screen

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>Bored Bot</title>
     </head>
     <body>
-        <h1>🤖 Bored Bot 🤖</h1>
-        <h4>Find something to do</h4>
-        <button></button>
+        <h1> Bored Bot 🥱 ⁉</h1>
+        <h2 id="idea">Find something to do</h2>
+        <button id="btn">Click to Discover</button>
         <script src="index.js"></script>
     </body>
 </html>
