--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <title>Bored Bot</title>
     </head>
     <body>
+        <main>
         <h1> Bored Bot 🥱 ⁉</h1>
         <h2 id="idea">Find something to do</h2>
         <button id="btn">Click to Discover</button>
         <script src="index.js"></script>
+        </main>
     </body>
 </html>
